# mimic_iv

./: .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml  setup.sh
macros/: generate_schema_name.sql
models/marts/: int_sepsis_cohort.sql  int_treatment_flags.sql  mart_analysis_cohort.sql
models/staging/: sources.yml  stg_admissions.sql  stg_diagnoses.sql  stg_icustays.sql  stg_patients.sql
notebooks/: 01_cohort_eda.ipynb  02_psm.ipynb  03_survival.ipynb  04_shap.ipynb
scripts/: setup_dbt.py  upload_to_snowflake.py
